# OmarSiwy.github.io

./: .gitignore  CNAME  Cargo.toml  INFO.md  README.md  angular.json  build.rs  index.html  main.yaml  package-lock.json  package.json  shell.nix  wrangler.toml
.github/workflows/: deploy.yml  main.yaml
backgroundprocess/: README.md  portfolio-status.service  system-status-updater.sh
graphics/: Cargo.toml
graphics/src/: main.rs  shader.vert  shader.wgsl
src/: cache.rs  index.html  lib.rs  main.rs  resources.rs  shader.frag
src/app/: app.component.css  app.component.ts  app.routes.ts
src/app/about/: about.component.html
src/app/experience/: experience.component.spec.ts  experience.component.ts
src/app/hardwareprojects/: hardwareprojects.component.html  hardwareprojects.component.spec.ts  hardwareprojects.component.ts
src/app/header/: header.component.css  header.component.html  header.component.ts
src/app/home/: home.component.html
src/app/projects/: projects.component.ts
src/app/softwareprojects/: softwareprojects.component.html  softwareprojects.component.spec.ts  softwareprojects.component.ts
src/handlers/: api.rs  mod.rs  pages.rs
src/models/: experience.rs  mod.rs  profile.rs  project.rs  resume.tex  system.rs
src/routes/: mod.rs
src/state/: mod.rs
src/templates/: experience.html  experience.rs  home.html  home.rs  layout.html  layout.rs  main.html  mod.rs  projects.html  projects.rs  status_card.html
src/utils/: mod.rs
