[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
# Hosting
axum = { version = "0.7", features = ["tokio", "http1"] }
worker = "^0.4.2"
worker-macros = { version = "^0.4.2", features = ["http"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tower = { version = "0.5.1", features = ["util"] }

# Templating
askama = "0.12.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.120"

# Error Handling
anyhow = "1.0"
tracing = "0.1.40"

# API
reqwest = { version = "0.12.0", default-features = false }
sqlx = { version = "0.7.0", features = ["postgres", "macros"], optional = true }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "net"] }

[workspace]
members = [
    "graphics",
]
