[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Hosting
axum = { version = "0.8", default-features = false, features = [
    "http1",
    "query",
    "macros",
    "json",
] }
tower-service = "0.3.2"
worker = "0.5"

# Axum and Cloudflare integration
axum-cloudflare-adapter = "0.14.0"

# Templating
askama = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1"

# WASM
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4"
oneshot = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
